[tool.poetry]
name = "linear-regression"
version = "0.1.0"
description = ""
authors = ["Jad Abu Awwad <jadabuawwad@outlook.com>"]

[tool.poetry.dependencies]
python = "3.9.5"
sklearn = "^0.0"
pandas = "^1.3.4"
ipykernel = "^6.4.2"
numpy = "^1.21.3"
matplotlib = "^3.4.3"
jupyterlab = "^3.2.1"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = "^21.9b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
